--- a/app/src/main/res/layout/activity_manga.xml
+++ b/app/src/main/res/layout/activity_manga.xml
@@ -13,36 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:id="@+id/main_layout"
-        android:orientation="vertical"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
+        android:id="@+id/frame_layout_fragment_scans_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <!--<include-->
-            <!--android:id="@+id/app_bar"-->
-            <!--layout="@layout/app_bar_main"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content" />-->
-
-        <!-- our tablayout to display tabs  -->
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
-            app:tabMaxWidth="0dp"/>
-
-        <!-- View pager to swipe views -->
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"/>
-
-    </LinearLayout>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
