--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -13,11 +12,6 @@
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/CustomToolbarTheme"
-        app:titleTextAppearance="@style/ToolbarTitle"
+        app:titleTextAppearance="@style/ToolbarTitle" />
 
-
-
-        />
-    <!--app:titleTextAppearance="@style/ToolbarTitle"-->
-    <!--android:theme="@style/CustomToolbarTheme"-->
 </android.support.design.widget.AppBarLayout>
