--- a/app/src/main/res/layout/fragment_manga_list.xml
+++ b/app/src/main/res/layout/fragment_manga_list.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ui.fragments.MangaListFragment"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context="ui.fragments.MangaListFragment">
 
     <android.support.v7.widget.SearchView
         android:id="@+id/search_view_manga"
@@ -13,10 +12,8 @@
         android:focusable="true"
         android:visibility="gone"/>
 
-
-
     <TextView
-        android:id="@+id/text_view_empty_state"
+        android:id="@+id/text_view_first_time"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginStart="10dp"
@@ -24,9 +21,16 @@
         android:text="Téléchargement des noms des manga et de leurs icônes
 Veuillez patienter..."
         android:textAlignment="center"
+        android:layout_centerInParent="true" />
 
-        android:layout_centerInParent="true"
-        />
+    <ImageView
+        android:id="@+id/image_view_empty_state"
+        android:layout_width="256dp"
+        android:layout_height="256dp"
+        android:src="@mipmap/image_empty_state"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/progress_bar_empty_state"
@@ -34,18 +38,25 @@ Veuillez patienter..."
         android:layout_height="50dp"
         android:indeterminate="true"
         android:layout_marginTop="30dp"
-        android:layout_below="@id/text_view_empty_state"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_below="@id/text_view_first_time"
+        android:layout_centerHorizontal="true" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_manga"
-        android:scrollbars="vertical"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:layout_below="@id/search_view_manga"
-        />
+        android:layout_below="@id/search_view_manga">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_manga"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinator_layout_snackbar"
