--- a/app/src/main/res/layout/fragment_scans.xml
+++ b/app/src/main/res/layout/fragment_scans.xml
@@ -1,12 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
+    <android.support.v7.widget.SearchView
+        android:id="@+id/search_view_scans"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/text_view_empty_state"
+        android:id="@+id/text_view_first_time"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginStart="10dp"
@@ -14,9 +19,7 @@
         android:text="Téléchargement des noms des scans pour ce manga
 Veuillez patienter..."
         android:textAlignment="center"
-
-        android:layout_centerInParent="true"
-        />
+        android:layout_centerInParent="true" />
 
     <ProgressBar
         android:id="@+id/progress_bar_empty_state"
@@ -24,19 +27,16 @@ Veuillez patienter..."
         android:layout_height="50dp"
         android:indeterminate="true"
         android:layout_marginTop="30dp"
-        android:layout_below="@id/text_view_empty_state"
-        android:layout_centerHorizontal="true"
-        />
-
+        android:layout_below="@id/text_view_first_time"
+        android:layout_centerHorizontal="true" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_scans"
         android:scrollbars="vertical"
         android:clipToPadding="false"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-
+        android:layout_height="match_parent"
+        android:layout_below="@id/search_view_scans" />
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinator_layout_snackbar"
@@ -45,7 +45,5 @@ Veuillez patienter..."
         android:layout_alignParentBottom="true">
 
     </android.support.design.widget.CoordinatorLayout>
-
-
 
 </RelativeLayout>
