--- a/app/src/main/res/layout/scan_recycler_view_item.xml
+++ b/app/src/main/res/layout/scan_recycler_view_item.xml
@@ -16,29 +16,26 @@
         android:layout_height="wrap_content"
         android:padding="10dp">
 
-    <TextView
-        android:id="@+id/text_view_scan_name"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
+        <TextView
+            android:id="@+id/text_view_scan_name"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
 
-    <TextView
-        android:id="@+id/text_view_download_status"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_toEndOf="@id/text_view_scan_name"
-        android:layout_toRightOf="@id/text_view_scan_name" />
+        <TextView
+            android:id="@+id/text_view_download_status"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="20dp"
+            android:layout_toEndOf="@id/text_view_scan_name" />
 
-    <ImageView
-        android:id="@+id/image_view_download_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        card_view:srcCompat="@drawable/ic_file_download_black_24dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true" />
+        <ImageView
+            android:id="@+id/image_view_download_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            card_view:srcCompat="@drawable/ic_file_download_black_24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true" />
 
     </RelativeLayout>
 
