--- a/app/src/main/res/layout/fragment_scans.xml
+++ b/app/src/main/res/layout/fragment_scans.xml
@@ -2,13 +2,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/text_view_new_scan"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Nouveau(x) scan(s) disponibles(s) !"
+        android:background="@color/colorRed"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.SearchView
         android:id="@+id/search_view_scans"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:layout_below="@id/text_view_new_scan"/>
 
     <TextView
         android:id="@+id/text_view_first_time"
@@ -30,13 +40,21 @@ Veuillez patienter..."
         android:layout_below="@id/text_view_first_time"
         android:layout_centerHorizontal="true" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_scans"
-        android:scrollbars="vertical"
-        android:clipToPadding="false"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/search_view_scans" />
+        android:layout_below="@id/search_view_scans">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_scans"
+            android:scrollbars="vertical"
+            android:clipToPadding="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinator_layout_snackbar"
