--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -10,14 +10,6 @@
         android:layout_height="wrap_content"
         android:elevation="4dp"
         android:theme="@style/CustomToolbarTheme"
-        app:titleTextAppearance="@style/ToolbarTitle">
-
-        <ImageView
-            android:id="@+id/image_view_toolbar_new_scan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_fiber_new_blue_24dp"
-            android:visibility="gone" />
-    </android.support.v7.widget.Toolbar>
+        app:titleTextAppearance="@style/ToolbarTitle" />
 
 </android.support.design.widget.AppBarLayout>
