--- a/app/src/main/res/layout/fragment_manga_list.xml
+++ b/app/src/main/res/layout/fragment_manga_list.xml
@@ -13,32 +13,33 @@
         android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/text_view_first_time"
+        android:id="@+id/text_view_loading"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Téléchargement des mangas
-Veuillez patienter..."
+        android:text="@string/fragment_manga_list_loading"
         android:textAlignment="center"
         android:layout_centerInParent="true" />
 
-    <ImageView
-        android:id="@+id/image_view_empty_state"
-        android:layout_width="256dp"
-        android:layout_height="256dp"
-        android:src="@mipmap/image_empty_state"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:visibility="gone" />
+    <TextView
+        android:id="@+id/text_view_empty_state"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="@string/fragment_manga_list_empty_state"
+        android:textAlignment="center"
+        android:visibility="gone"
+        android:layout_centerInParent="true" />
 
     <ProgressBar
-        android:id="@+id/progress_bar_empty_state"
+        android:id="@+id/progress_bar_loading"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:indeterminate="true"
         android:layout_marginTop="30dp"
-        android:layout_below="@id/text_view_first_time"
+        android:layout_below="@id/text_view_loading"
         android:layout_centerHorizontal="true" />
 
     <android.support.v4.widget.SwipeRefreshLayout
