--- a/app/src/main/res/layout/fragment_scans.xml
+++ b/app/src/main/res/layout/fragment_scans.xml
@@ -2,42 +2,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_view_new_scan"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="Nouveau(x) scan(s) disponibles(s) !"
-        android:background="@color/colorRed"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone"/>
-
     <android.support.v7.widget.SearchView
         android:id="@+id/search_view_scans"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
-        android:visibility="gone"
-        android:layout_below="@id/text_view_new_scan"/>
+        android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/text_view_first_time"
+        android:id="@+id/text_view_loading"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Chargement en cours\n
-Veuillez patienter..."
+        android:text="@string/fragment_scans_loading"
         android:textAlignment="center"
         android:layout_centerInParent="true" />
 
+    <TextView
+        android:id="@+id/text_view_empty_state"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="@string/fragment_scans_empty_state"
+        android:textAlignment="center"
+        android:visibility="gone"
+        android:layout_centerInParent="true" />
+
     <ProgressBar
-        android:id="@+id/progress_bar_empty_state"
+        android:id="@+id/progress_bar_loading"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:indeterminate="true"
         android:layout_marginTop="30dp"
-        android:layout_below="@id/text_view_first_time"
+        android:layout_below="@id/text_view_loading"
         android:layout_centerHorizontal="true" />
 
     <android.support.v4.widget.SwipeRefreshLayout
