--- a/app/src/main/res/layout/scan_recycler_view_item.xml
+++ b/app/src/main/res/layout/scan_recycler_view_item.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="20dp"
-            android:layout_toStartOf="@id/text_view_scan_name"
+            android:layout_toStartOf="@id/image_view_download_status"
             android:layout_toEndOf="@id/text_view_scan_name" />
 
         <ImageView
