--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -56,6 +56,51 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card_view_wrong_language_scans"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            card_view:cardBackgroundColor="@color/cardview_light_background"
+            card_view:cardCornerRadius="4dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
+                android:padding="8dp">
+
+                <TextView
+                    android:id="@+id/text_view_wrong_language_scans_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/image_button_wrong_language_scans_extend"
+                    android:text="@string/help_title_wrong_language_scans"
+                    android:textSize="22sp"
+                    android:layout_marginBottom="10dp"/>
+
+                <ImageButton
+                    android:id="@+id/image_button_wrong_language_scans_extend"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
+                    android:background="#00000000"/>
+
+                <TextView
+                    android:id="@+id/text_view_wrong_language_scans_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_wrong_language_scans_title"
+                    android:visibility="gone"
+                    android:text="@string/help_content_wrong_language_scans"/>
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
             android:id="@+id/card_view_scan_missing"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
