--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -6,16 +6,22 @@
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="match_parent"
-        android:layout_height="7dp"
+        android:layout_height="5dp"
         android:max="100"
         android:indeterminate="false"
         android:scaleY="2.5"
-        style="?android:attr/progressBarStyleHorizontal"
-         />
+        style="?android:attr/progressBarStyleHorizontal" />
 
     <ui.views.ExtendedViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/progressBar" />
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout_snackbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
+
 </RelativeLayout>
